crates/test-files/fixtures/compile_errors/invalid_generic_bound.fe
struct Foo {
    pub fn bar<T: bool>(val: T) {}
}